fix(components): align the sub-menu items to first menu item in Header

--- a/src/components/shared/header/header.module.scss
+++ b/src/components/shared/header/header.module.scss
@@ -124,7 +124,7 @@
 
   &:last-child {
     position: relative;
-    margin-right: 0;
+    margin-right: 20px;
 
     &::before {
       position: absolute;
